[gd_scene load_steps=13 format=3 uid="uid://nm0w0yqxo1k3"]

[ext_resource type="Texture2D" uid="uid://cfv4r6byk3h0" path="res://icon.svg" id="1_3qtfs"]
[ext_resource type="Shader" path="res://background.gdshader" id="1_ssnst"]
[ext_resource type="Script" path="res://Player.gd" id="2_6qgxp"]
[ext_resource type="Texture2D" uid="uid://dhrmuxmi5xh3m" path="res://reticle.png" id="3_0yt7s"]
[ext_resource type="Script" path="res://Grapple.gd" id="3_2whii"]
[ext_resource type="Texture2D" uid="uid://csbmychwfa3r1" path="res://circle.png" id="3_5u7pa"]
[ext_resource type="Script" path="res://PlayerController.gd" id="3_ju4yq"]
[ext_resource type="Script" path="res://Reticle.gd" id="4_3jk0o"]
[ext_resource type="Script" path="res://GrappleLine.gd" id="7_r1qhw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b32nj"]
shader = ExtResource("1_ssnst")
shader_parameter/color1 = Color(0.294118, 0.654902, 0.890196, 1)
shader_parameter/color2 = Color(0.258824, 0.231373, 0.341176, 1)
shader_parameter/color3 = Color(0.0666667, 0.529412, 0.670588, 1)
shader_parameter/color4 = Color(0, 0.298039, 0.541176, 1)
shader_parameter/timeScale = 2.08165e-12
shader_parameter/resolution = Vector2(300, 200)

[sub_resource type="CircleShape2D" id="CircleShape2D_fhpe3"]
radius = 256.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nu8wk"]

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
editor_draw_limits = true

[node name="Level0" type="Node2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="Level0"]
material = SubResource("ShaderMaterial_b32nj")
polygon = PackedVector2Array(-2184, -1259, -2213, 1655, 2308, 1675, 2245, -1286)

[node name="Border" type="Polygon2D" parent="Level0"]
position = Vector2(2.08165e-12, 2.08165e-12)
polygon = PackedVector2Array(-2092, 1524, 2118, 1534, 1870, 1039, -1897, 1044, -1891, -1060, 1878, -1054, 1870, 1039, 2118, 1534, 2000, -1131, -1973, -1121)

[node name="StaticBody2D" type="StaticBody2D" parent="Level0/Border"]
input_pickable = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level0/Border/StaticBody2D"]
position = Vector2(2.08165e-12, 2.08165e-12)
polygon = PackedVector2Array(-2092, 1524, 2118, 1534, 1870, 1039, -1897, 1044, -1891, -1060, 1878, -1054, 1870, 1039, 2118, 1534, 2000, -1131, -1973, -1121)

[node name="Box" type="Polygon2D" parent="Level0"]
position = Vector2(-37.2807, -78.3654)
scale = Vector2(0.561404, 0.519231)
polygon = PackedVector2Array(-181, -123, -134.875, -188.037, -101.031, -120.63, -134.875, -37.8148)

[node name="StaticBody2D" type="StaticBody2D" parent="Level0/Box"]
input_pickable = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level0/Box/StaticBody2D"]
position = Vector2(2.08165e-12, 2.08165e-12)
polygon = PackedVector2Array(-181, -123, -134.875, -188.037, -101.031, -120.63, -134.875, -37.8148)

[node name="Reticle" type="Sprite2D" parent="."]
position = Vector2(230, 2.1684e-19)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_0yt7s")
script = ExtResource("4_3jk0o")
highlightedColor = Color(0.839216, 0.376471, 0.831373, 1)
normalColor = Color(0.2, 0.654902, 0.423529, 1)
highlightedScale = 0.15
normalScale = 0.1
pressedDownScale = 0.08

[node name="Node" type="Node" parent="."]
script = ExtResource("3_ju4yq")
gravity = 10.0
grappleGravity = 8.0

[node name="GrappleLine" type="Line2D" parent="Node"]
points = PackedVector2Array(0, 0, 0, 0)
width = 2.0
default_color = Color(0.788235, 0.54902, 0.976471, 1)
script = ExtResource("7_r1qhw")

[node name="TrailLine" type="Line2D" parent="Node"]
position = Vector2(2.08165e-12, 2.08165e-12)
width = 2.0

[node name="DebugLine" type="Line2D" parent="Node"]
position = Vector2(2.08165e-12, 2.08165e-12)
points = PackedVector2Array(0, 0, 0, 0)
width = 2.0

[node name="Grapple" type="CharacterBody2D" parent="Node"]
position = Vector2(269, -140)
scale = Vector2(0.02, 0.02)
collision_layer = 4
collision_mask = 3
script = ExtResource("3_2whii")

[node name="Sprite2D" type="Sprite2D" parent="Node/Grapple"]
modulate = Color(0.811765, 0.415686, 1, 1)
position = Vector2(2.08165e-12, 2.08165e-12)
texture = ExtResource("3_5u7pa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/Grapple"]
shape = SubResource("CircleShape2D_fhpe3")

[node name="PlayerBody" type="CharacterBody2D" parent="Node"]
position = Vector2(269, -140)
scale = Vector2(2, 2)
collision_layer = 2
slide_on_ceiling = false
script = ExtResource("2_6qgxp")

[node name="Sprite2D" type="Sprite2D" parent="Node/PlayerBody"]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(0.15625, 0.15625)
texture = ExtResource("1_3qtfs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/PlayerBody"]
position = Vector2(2.08165e-12, 2.08165e-12)
shape = SubResource("RectangleShape2D_nu8wk")

[connection signal="mouse_entered" from="Level0/Border/StaticBody2D" to="Reticle" method="_on_mouse_entered_grapple_area"]
[connection signal="mouse_exited" from="Level0/Border/StaticBody2D" to="Reticle" method="_on_mouse_exited_grapple_area"]
[connection signal="mouse_entered" from="Level0/Box/StaticBody2D" to="Reticle" method="_on_mouse_entered_grapple_area"]
[connection signal="mouse_exited" from="Level0/Box/StaticBody2D" to="Reticle" method="_on_mouse_exited_grapple_area"]
[connection signal="clicked_on_grapple_area" from="Reticle" to="Node" method="_on_reticle_clicked_on_grapple_area"]
[connection signal="clicked_release_from_grapple_area" from="Reticle" to="Node" method="_on_clicked_release_from_grapple_area"]
[connection signal="ready" from="Node" to="Node" method="_on_ready"]
